changed structure a bit to work around opacity bug on Safari 6

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -164,6 +164,13 @@ body{
     background-size: cover;
 }
 
+#photoFilter.softgray {
+    -webkit-filter: grayscale(1) blur(10px);
+}
+
+#photoOrig.softgray {
+    -webkit-filter: none;
+}
 
 /* ==========================================================================
    Helper classes
